--- a/Blubb/Base.lproj/Main.storyboard
+++ b/Blubb/Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Pi5-bL-bxd" firstAttribute="top" secondItem="UPh-4V-35T" secondAttribute="bottom" constant="100" id="MhF-qf-Iac"/>
                             <constraint firstItem="Pm5-SE-QVj" firstAttribute="trailing" secondItem="mqZ-LE-bCV" secondAttribute="trailing" constant="20" id="Sfw-4Q-XNC"/>
